    - [fitting] Reduce objets sizes by removing unnecessary attributes (#56)
    - [fitting] Set default fields values (#56)
    - [fitting] Remove explicit implementation of default constructors (#56)
    - [fitting] Add macros to simplify headers writing (#56)
    - [fitting] Fix several warnings when compiling with MSVC (#56)

- Tests
    - [fitting] Update according to API changes (#56)

--------------------------------------------------------------------------------
v.0.3
- API
    - [spatialpartitioning] Remove duplicated code and clean API (#32,#51)
    - [spatialpartitioning] Fix a bug in range queries (#46)
    - [spatialpartitioning] Add a counter of leaf in the KdTree (#55)
    - [spatialpartitioning] Add editInput on Queries to allow query re-usability
      between different request (#57)
    - [fitting] Add Line primitive and LeastSquaresLineFitting (#39)
    - [fitting] Rename several classes for better name consistency (#42)
    - [fitting] Add DryFit: a dummy fit object useful for debugging or monitoring (#52, #53)
    - [fitting] Improve convenience functions for basket: add compute(Range) and
      computeWithIds, which can be directly interfaced with kdtree queries (#53)
    - [fitting] Fix too sensitive AlgebraicSphere comparison (#53)
    - [common] Add missing include directive in stack.h (#59)

- Buildchain
    - [cmake] Add option to hide IDE targets (#54)

- Tests
    - [spatialpartitioning] Fix wrong test macro in kdtree tests (#46)
    - [fitting] Fix bug in basket test (#51)
    - [fitting] Disable test on windows when using long doubles (#53)

- Dependencies
    - [eigen] Update default version to 3.4 (#53)

- Doc
    - Rewrite documentation of the fitting package user manual and its classes. (#42)
    - Fix typo in user manual (#34)
    - Fix broken speed/quality comparisons for curvature estiators (#53)
    - Fix Mathjax configuration (#41)
    - Update author list (#42)
