@@ -1,74 +1,6 @@
-/*div.contents {
-  max-width:100%;
-  text-align:justify;
-}*/
 
-html { background-color: #eee; }
 
-body {
-    margin:    0 auto;
-    max-width: 1100px;
-    border: 1px solid grey;
-}
-
-div.dessin:hover {
-        border-color:#fbeac1 #c89f4e #8c6916;
-}
-
-div.dessin {
-        /*border-color:#CCCCCC #6c6a64 #333230;
-        border-style:solid;
-        border-width:3px;*/
-        float:left;
-        height:200px;
-        margin:4px;
-        width:180px;
-}
-
-.sm-dox{
-background-color: #555;
-background-image: none;
-}
-.sm-dox a{
-background-image: none;
-text-decoration-style: none;
-text-shadow: none;
-color: #fff;
-}
-.sm-dox a:hover{
-background-color: #333;
-background-image: none;
-color: #fff;
-}
-
-.sm-nowrap{
-background-color: #555;
-background-image: none;
-}
-.sm-nowrap a{
-background-image: none;
-text-decoration-style: none;
-text-shadow: none;
-color: #fff;
-}
-.sm-nowrap a:hover{
-background-color: #333;
-background-image: none;
-color: #fff;
-}
-.sm-dox ul a:hover {
- background-image:none;
- background-color: #555;
-}
-
-div.clear {
-        clear: both;
-}
-
-#nav-sync {
-        display:none;
-}
-
-a {
-        font-weight:bold;
+html {
+    /* Overrides Doxygen Awesome CSS presets */
+    --side-nav-arrow-opacity: 0.5;
 }
